# backend/model/request/system_domain.go
@@ -1,16 +1,16 @@
 package request
 
 type SystemDomainPageRequest struct {
-	DomainName *string `json:"domain_name"`
+	DomainName *string `json:"domainName"`
 	PageRequest
 }
 
 type AddDomainRequest struct {
-	DomainName string `json:"domain_name" binding:"required"`
+	DomainName string `json:"domainName" binding:"required"`
 }
 
 type UpdateDomainRequest struct {
-	DomainId int64 `json:"domain_id" binding:"required"`
+	DomainId int64 `json:"domainId" binding:"required"`
 
-	DomainName string `json:"domain_name" binding:"required"`
+	DomainName string `json:"domainName" binding:"required"`
 }
