# backend/schema/base.go
@@ -2,23 +2,21 @@ package schema
 
 import (
 	"time"
-
-	"gorm.io/gorm"
 )
 
 type BaseSchema struct {
-	IsDelete   bool      `json:"is_delete" gorm:"default:0;column:is_delete"`
-	CreateTime time.Time `json:"create_time" gorm:"column:create_time"`
-	UpdateTime time.Time `json:"update_time" gorm:"column:update_time"`
+	IsDelete   bool      `json:"isDelete" gorm:"default:0;column:is_delete"`
+	CreateTime time.Time `json:"createTime" gorm:"column:create_time;autoCreateTime:milli"`
+	UpdateTime time.Time `json:"updateTime" gorm:"column:update_time;autoUpdateTime:milli"`
 }
 
-func (b *BaseSchema) BeforeCreate(tx *gorm.DB) error {
-	b.CreateTime = time.Now()
-	b.UpdateTime = time.Now()
-	return nil
-}
-
-func (b *BaseSchema) BeforeUpdate(tx *gorm.DB) error {
-	b.UpdateTime = time.Now()
-	return nil
-}
+//func (b *BaseSchema) BeforeCreate(tx *gorm.DB) error {
+//	b.CreateTime = time.Now()
+//	b.UpdateTime = time.Now()
+//	return nil
+//}
+//
+//func (b *BaseSchema) BeforeUpdate(tx *gorm.DB) error {
+//	b.UpdateTime = time.Now()
+//	return nil
+//}
